--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,10 +16,10 @@
 		        <% if !current_user.nil? %>
 		            <nav class="header-nav">
 		            	<div class="header-nav-item">
-		            		<form class="search-form">
-		            			<input type="search" class="search-form-input" placeholder="検索">
-		            			<img src="/assets/img/search.png" width="30" height="30">
-		            		</form>
+		            		<!--<form class="search-form">-->
+		            			<!--<input type="search" class="search-form-input" placeholder="検索">-->
+		            			<!--<img src="/assets/img/search.png" width="30" height="30">-->
+		            		<!--</form>-->
 		            	</div>
 		            	<div class="header-nav-item">
 		            		<a href="/home" class="user-icon"><img src="<%= current_user.image %>" alt="プロフィール画像" width="40" height="40"></a>
@@ -31,10 +31,10 @@
 		        <% else %>
 		            <nav class="header-nav">
 		            	<div class="header-nav-item">
-		            		<form class="search-form">
-		            			<input type="search" class="search-form-input" placeholder="検索">
-		            			<img src="/assets/img/search.png" width="30" height="30">
-		            		</form>
+		            		<!--<form class="search-form">-->
+		            			<!--<input type="search" class="search-form-input" placeholder="検索">-->
+		            			<!--<img src="/assets/img/search.png" width="30" height="30">-->
+		            		<!--</form>-->
 		            	</div>
 		            	<div class="header-nav-item">
 		            		<a href="/signup" class="header-button">新規登録</a>
