--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="/assets/img/icon_webs.png">
 		<link rel="stylesheet" href="/assets/css/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+		<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
@@ -16,10 +17,10 @@
 		        <% if !current_user.nil? %>
 		            <nav class="header-nav">
 		            	<div class="header-nav-item">
-		            		<!--<form class="search-form">-->
-		            			<!--<input type="search" class="search-form-input" placeholder="検索">-->
-		            			<!--<img src="/assets/img/search.png" width="30" height="30">-->
-		            		<!--</form>-->
+		            		<form action="/search" method="get" class="search-form">
+		            			<input type="text" name="keyword" class="search-form-input" placeholder="検索">
+		            			<img src="/assets/img/search.png" width="30" height="30">
+		            		</form>
 		            	</div>
 		            	<div class="header-nav-item">
 		            		<a href="/home" class="user-icon"><img src="<%= current_user.image %>" alt="プロフィール画像" width="40" height="40"></a>
@@ -31,10 +32,10 @@
 		        <% else %>
 		            <nav class="header-nav">
 		            	<div class="header-nav-item">
-		            		<!--<form class="search-form">-->
-		            			<!--<input type="search" class="search-form-input" placeholder="検索">-->
-		            			<!--<img src="/assets/img/search.png" width="30" height="30">-->
-		            		<!--</form>-->
+		            		<form action="/search" method="get" class="search-form">
+		            			<input type="text" name="keyword" class="search-form-input" placeholder="検索">
+		            			<img src="/assets/img/search.png" width="30" height="30">
+		            		</form>
 		            	</div>
 		            	<div class="header-nav-item">
 		            		<a href="/signup" class="header-button">新規登録</a>
@@ -48,7 +49,6 @@
 		</header>
 		<main>
 			<%= yield %>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		</main>
 	</body>
 </html>
